--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Ouvill <contact@ouvill.net>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "typescript": "^3.7.4"
+  }
 }
