--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Ouvill <contact@ouvill.net>",
   "license": "MIT",
   "dependencies": {
+    "@types/qrcode": "^1.3.4",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
+    "qrcode": "^1.4.4",
     "ts-node": "^8.6.2"
   },
   "devDependencies": {
