--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "index.js",
   "author": "Ouvill <contact@ouvill.net>",
   "license": "MIT",
+  "scripts": {
+    "start": "npm start",
+    "dev": "nodemon"
+  },
   "dependencies": {
     "@types/qrcode": "^1.3.4",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
