--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@types/qrcode": "^1.3.4",
+    "debug": "^4.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
     "ts-node": "^8.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/http-errors": "^1.6.3",
+    "@types/morgan": "^1.7.37",
     "typescript": "^3.7.4"
   }
 }
