--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
   "license": "MIT",
   "scripts": {
     "start": "npm start",
-    "dev": "nodemon"
+    "dev": "cpx src/public/**/* dist/public -w & webpack -w & dist/public && nodemon"
   },
   "dependencies": {
-    "@types/qrcode": "^1.3.4",
-    "debug": "^4.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
-    "ts-node": "^8.6.2"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.7.37",
-    "typescript": "^3.7.4"
+    "@types/qrcode": "^1.3.4",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
+    "cpx": "^1.5.0",
+    "debug": "^4.1.1",
+    "typescript": "^3.7.4",
+    "webpack-cli": "^3.3.10"
   }
 }
